re PR c++/57222 (Template alias not working in argument of template class template method)

PR c++/57222
	* pt.c (lookup_template_class_1): Handle getting a template
	template parameter as D1.

From-SVN: r198749